--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,42 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will build, test, sign and package a WPF or Windows Forms desktop application
-# built on .NET Core.
-# To learn how to migrate your existing application to .NET Core,
-# refer to https://docs.microsoft.com/en-us/dotnet/desktop-wpf/migration/convert-project-from-net-framework
-#
-# To configure this workflow:
-#
-# 1. Configure environment variables
-# GitHub sets default environment variables for every workflow run.
-# Replace the variables relative to your project in the "env" section below.
-#
-# 2. Signing
-# Generate a signing certificate in the Windows Application
-# Packaging Project or add an existing signing certificate to the project.
-# Next, use PowerShell to encode the .pfx file using Base64 encoding
-# by running the following Powershell script to generate the output string:
-#
-# $pfx_cert = Get-Content '.\SigningCertificate.pfx' -Encoding Byte
-# [System.Convert]::ToBase64String($pfx_cert) | Out-File 'SigningCertificate_Encoded.txt'
-#
-# Open the output file, SigningCertificate_Encoded.txt, and copy the
-# string inside. Then, add the string to the repo as a GitHub secret
-# and name it "Base64_Encoded_Pfx."
-# For more information on how to configure your signing certificate for
-# this workflow, refer to https://github.com/microsoft/github-actions-for-desktop-apps#signing
-#
-# Finally, add the signing certificate password to the repo as a secret and name it "Pfx_Key".
-# See "Build the Windows Application Packaging project" below to see how the secret is used.
-#
-# For more information on GitHub Actions, refer to https://github.com/features/actions
-# For a complete CI/CD sample to get started with GitHub Action workflows for Desktop Applications,
-# refer to https://github.com/microsoft/github-actions-for-desktop-apps
-
-name: .NET Core Desktop
+name: .NET Core Desktop CI
 
 on:
   push:
@@ -44,71 +6,73 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  SOLUTION_NAME: ST10442835PRGPOEPart1.sln
+  WAP_PROJECT_DIR: ST10442835PRGPOEPart1.Package
+  WAP_PROJECT_PATH: ST10442835PRGPOEPart1.Package\ST10442835PRGPOEPart1.Package.wapproj
+  ARTIFACT_NAME: CybersecurityChatBot_MSIX
+
 jobs:
-
   build:
-
     strategy:
       matrix:
-        configuration: [Debug, Release]
+        configuration: [Release] # Changed from Debug,Release to just Release for production builds
 
     runs-on: windows-latest
 
-    env:
-      Solution_Name: ST10442835PRGPOEPart1.sln
-      Test_Project_Path: ST10442835PRGPOEPart1.Tests\ST10442835PRGPOEPart1.Tests.csproj
-      Wap_Project_Directory: ST10442835PRGPOEPart1.Package
-      Wap_Project_Path: ST10442835PRGPOEPart1.Package\ST10442835PRGPOEPart1.Package.wapproj
-
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    # Install the .NET Core workload
-    - name: Install .NET Core
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: '9.0.x' # Updated to match your project's target framework
 
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
+    - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
+    - name: Restore dependencies
+      run: dotnet restore $env:SOLUTION_NAME
+
+    - name: Run unit tests
       run: dotnet test
 
-    # Restore the application to populate the obj folder with RuntimeIdentifiers
-    - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
-
-    # Decode the base 64 encoded pfx and save the Signing_Certificate
-    - name: Decode the pfx
+    - name: Decode and install signing certificate
       run: |
-        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
-        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+        # Create the package directory if it doesn't exist
+        New-Item -ItemType Directory -Force -Path $env:WAP_PROJECT_DIR
+        
+        # Decode and write the certificate
+        $pfxBytes = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODED_PFX }}")
+        $certPath = Join-Path -Path $env:WAP_PROJECT_DIR -ChildPath "SigningCertificate.pfx"
+        [IO.File]::WriteAllBytes($certPath, $pfxBytes)
+        
+        # Verify certificate exists
+        if (Test-Path $certPath) {
+          Write-Host "Certificate successfully written to $certPath"
+        } else {
+          Write-Error "Failed to write certificate"
+          exit 1
+        }
 
-    # Create the app package by building and packaging the Windows Application Packaging project
-    - name: Create the app package
-      run: msbuild $env:Wap_Project_Path /p:Configuration=$env:Configuration /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
-      env:
-        Appx_Bundle: Always
-        Appx_Bundle_Platforms: x86|x64
-        Appx_Package_Build_Mode: StoreUpload
-        Configuration: ${{ matrix.configuration }}
+    - name: Build WAP project
+      run: |
+        msbuild $env:WAP_PROJECT_PATH `
+          /p:Configuration=${{ matrix.configuration }} `
+          /p:UapAppxPackageBuildMode=StoreUpload `
+          /p:AppxBundle=Always `
+          /p:AppxBundlePlatforms="x86|x64" `
+          /p:PackageCertificateKeyFile="SigningCertificate.pfx" `
+          /p:PackageCertificatePassword="${{ secrets.PFX_KEY }}"
 
-    # Remove the pfx
-    - name: Remove the pfx
-      run: Remove-Item -path $env:Wap_Project_Directory\GitHubActionsWorkflow.pfx
+    - name: Clean up certificate
+      run: Remove-Item -Path "$env:WAP_PROJECT_DIR\SigningCertificate.pfx" -Force -ErrorAction SilentlyContinue
 
-    # Upload the MSIX package: https://github.com/marketplace/actions/upload-a-build-artifact
-    - name: Upload build artifacts
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: MSIX Package
-        path: ${{ env.Wap_Project_Directory }}\AppPackages
+        name: ${{ env.ARTIFACT_NAME }}
+        path: ${{ env.WAP_PROJECT_DIR }}\AppPackages
